# Genetic-Algorithm-Reversi

./: CMakeLists.txt  Game.cpp  Heuristic.cpp  Heuristic.h  README.md  main.cpp
